MDEV-15728 main.thread_id_overflow fails in ps-protocol

mark CONNECTION_ID() as returning *unsigned* number